spacing issue

--- a/blocks/career-apply/career-apply.css
+++ b/blocks/career-apply/career-apply.css
@@ -15,6 +15,7 @@
 }
 
 .career-apply h2 {
+    margin-top: 0;
     color: var(--white);
     font-size: 28px;
     margin-bottom: 1rem;
@@ -26,7 +27,7 @@
 
 .career-apply p {
     line-height: 24px;
-    margin-bottom: 0;
+    margin-bottom: 1.5rem;
 }
 
 .career-apply.inverted p {
@@ -34,6 +35,7 @@
 }
 
 .career-apply .button-container {
+    margin: 0;
     display: inline-flex;
     flex-direction: column;
 }
